img file updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://limonbpi.github.io/coffe/img/28908040_201272087133248_59023102_n.jpg" alt="">
+    <img src="https://limonbpi.github.io/coffe/img/1.jpg" alt="">
+    <img src="https://limonbpi.github.io/coffe/img/2.jpg" alt="">
+    <img src="https://limonbpi.github.io/coffe/img/3.jpg" alt="">
 </body>
 </html>
